# kodionline

./: .gitignore  Cargo.toml  flake.nix  kodi_interface.py  readme.md  setting.json  shell.nix
docs/: technical_overview.md
examples/: recurse_report.rs
kodi_recurse/: Cargo.toml
kodi_recurse/examples/: recurse_report.rs
kodi_recurse/src/: argument.rs  check.rs  lib.rs  main.rs  mirror.rs  recurse_kodi.rs  recurse_option.rs  report.rs  report_builder.rs
kodi_rust/: Cargo.toml  Rocket.toml
kodi_rust/src/: data.rs  format.rs  input.rs  kodi.rs  lib.rs  pathaccessdata.rs  setting.rs  user_config.rs
kodionline/: Cargo.toml
kodionline/docs/: technical_overview.md
kodionline/examples/: recurse_report.rs
kodionline/src/: error_page.rs  index_page.rs  input.rs  lib.rs  locale.rs  main.rs  plugin_page.rs  presentation.rs  redirect_page.rs
kodionline/static/: kodionline.css  musicplayer.js
kodionline/templates/: error.html.tera  index.html.tera  plugin.html.tera
locales/en-US/: main.ftl
locales/fr-FR/: main.ftl
src/: data.rs  error_page.rs  format.rs  getlink.rs  input.rs  kodi.rs  kodi_recurse.rs  lib.rs  main.rs  pathaccessdata.rs  plugin_page.rs  redirect_page.rs  setting.rs  user_config.rs
src/recurse/: mod.rs  recurse_kodi.rs  report.rs
static/: musicplayer.css  musicplayer.js
templates/: base.html.tera  index.html.tera  musicplayer.html.tera  plugin.html.tera  plugin_folder.html.tera  plugin_keyboard.html.tera  plugin_media.html.tera
