[package]
name = "kodionline"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.4"
shellexpand = "2.0.0"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.5"
html-escape = "0.2.6"
cached = "0.18.0"
pct-str = "1.0.2"
#rayon = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "serve"]
