[package]
name = "kodionline"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"
default-run = "kodionline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.4"
shellexpand = "2.0.0"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.5"
html-escape = "0.2.6"
cached = "0.18.0"
percent-encoding = "2.1.0"
log = "0.4.11"
clap = "2.33.3"
rayon = "1.4.0"
reqwest = { version="0.10.8", features = ["blocking"] }
console = "0.12.0"
shell-escape = "0.1.5"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "serve"]

[[bin]]
name = "kodionline"
path = "./src/main.rs"

[[bin]]
name = "kodi_recurse"
path = "./src/bin/recurse.rs"
