[package]
name = "kodi_recurse"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kodi_rust = { path = "../kodi_rust" }
reqwest = { version="0.10.8", features = ["blocking"] }
clap = "2.33.3"
serde_json = "1.0"
console = "0.12.0"
shell-escape = "0.1.5"
indicatif = "0.15.0"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
