[package]
name = "kodi_recurse"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kodi_rust = { path = "../kodi_rust" }
reqwest = { version="0.11.2", features = ["blocking"] }
clap = "2.34.0"
serde_json = "1.0.0"
console = "0.15.1"
shell-escape = "0.1.5"
indicatif = "0.15.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
