[package]
name = "kodionline"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kodi_rust = { path = "../kodi_rust" }
rocket = "0.5.1"
clap = "2.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.11"
maud = { version = "0.27.0", features = ["rocket"] }
fluent-templates = "0.13.0"
unic-langid = "0.9.0"
rust-embed = { version = "8.7.2", features = ["rocket"] }
